import org.flywaydb.gradle.task.FlywayCleanTask
import org.flywaydb.gradle.task.FlywayMigrateTask

buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath "org.flywaydb:flyway-mysql:12.5.0"
	}
}

plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.flywaydb.flyway" version "11.14.1"
	id 'com.netflix.nebula.jakartaee-migration' version '2.0.2'
}

group = 'com.desafio'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
	maven {
		url 'https://repository.apache.org/content/repositories/snapshots/'
		mavenContent {
			snapshotsOnly()
		}
	}
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Apache Wicket 7.17.0
	implementation 'org.apache.wicket:wicket-core:7.17.0'
	implementation 'org.apache.wicket:wicket-spring:7.17.0'
	implementation 'org.apache.wicket:wicket-extensions:7.17.0'
	implementation 'org.apache.wicket:wicket-datetime:7.17.0'
	implementation 'org.apache.wicket:wicket-request:7.17.0'
	implementation 'org.apache.wicket:wicket-util:7.17.0'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Database
	runtimeOnly 'com.mysql:mysql-connector-j:9.7.0'

	// Flyway
	implementation 'org.flywaydb:flyway-core:12.5.0'
	implementation 'org.flywaydb:flyway-mysql:12.5.0'

	// JasperReports
	implementation 'net.sf.jasperreports:jasperreports:7.0.6'
	implementation 'net.sf.jasperreports:jasperreports-pdf:7.0.6'

	// MapStruct
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	// Apache POI (Excel)
	implementation 'org.apache.poi:poi:5.5.1'
	implementation 'org.apache.poi:poi-ooxml:5.5.1'

	// Logging
	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.25.4'
	implementation 'org.apache.logging.log4j:log4j-core:2.25.4'

	// XML API
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

	// Test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers:1.19.3'
	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
	testImplementation 'org.testcontainers:mariadb:1.19.3'
	testImplementation 'org.mariadb.jdbc:mariadb-java-client:3.5.8'

	// Wicket Test
	testImplementation 'org.apache.wicket:wicket-util:7.17.0'

	// JUnit
	testImplementation 'junit:junit:4.13.2'
	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'

	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Configuração do Flyway
flyway {
	url = 'jdbc:mysql://localhost:3306/dummy_db'
	user = 'root'
	password = 'mariadb'
	validateMigrationNaming = true
	cleanDisabled = false
	locations = ['classpath:db/migration/main']
}

war {
	archiveBaseName.set('estagio')
	archiveVersion.set('1.0-SNAPSHOT')

	// Include Wicket HTML markup files from src/main/java
	from('src/main/java') {
		include '**/*.html'
		include '**/*.properties'
		into('') // Root of classpath
	}

	// Include resources
	from('src/main/resources') {
		include '**/*.html'
		include '**/*.css'
		include '**/*.js'
		include '**/*.properties'
	}
}

// Ensure HTML files are copied to build output during compilation
processResources {
	from('src/main/java') {
		include '**/*.html'
		include '**/*.properties'
	}
	duplicatesStrategy = 'exclude'
}

// For development/IDE support
sourceSets {
	main {
		resources {
			srcDirs = ['src/main/resources', 'src/main/java']
		}
	}
}

jakartaeeMigration {
	migrate()
}

tasks.named('test') {
	useJUnitPlatform()
}

// Task para criar o arquivo WAR
tasks.register('buildWar', War) {
	dependsOn classes
	archiveClassifier.set('standalone')
}

// Tasks do Flyway para teste
tasks.register('flywayTestMigrate', FlywayMigrateTask) {
	url = 'jdbc:mysql://localhost:3306/testdb'
	user = 'test'
	password = 'test'
	locations = ['classpath:db/migration/test']
	cleanDisabled = false
	baselineOnMigrate = true
	validateOnMigrate = true

	doFirst {
		println "Running Flyway migrations for test database"
		println "Make sure Docker is running and Testcontainers will start MariaDB"
	}
}

tasks.register('flywayTestClean', FlywayCleanTask) {
	url = 'jdbc:mysql://localhost:3306/testdb'
	user = 'test'
	password = 'test'
	cleanDisabled = false

	doFirst {
		println "Cleaning test database"
	}
}